added vector attributes

--- a/order-delivery/index.html
+++ b/order-delivery/index.html
@@ -169,6 +169,14 @@
 
     </div>
 
+    <div class="attributes">
+        
+      <p>Vector Art by <a href="https://www.shutterstock.com/g/Rawpixel">Rawpixel</a></p>
+
+      <p>Vector Art by <a href="https://www.vecteezy.com/">Vecteezy</a></p>
+
+    </div>
+
   </footer>
 
 
