--- a/locations/index.html
+++ b/locations/index.html
@@ -225,6 +225,14 @@
 
       <p class="copyright">copyright Wakin' Bakin' | 2019</p>
 
+      <div class="attributes">
+        
+        <p>Vector Art by <a href="https://www.shutterstock.com/g/Rawpixel">Rawpixel</a></p>
+
+        <p>Vector Art by <a href="https://www.vecteezy.com/">Vecteezy</a></p>
+
+      </div>
+      
     </div>
 
   </footer>
