--- a/menus/index.html
+++ b/menus/index.html
@@ -174,6 +174,15 @@
 
     <p class="copyright">copyright Wakin' Bakin' | 2019</p>
 
+    <div class="attributes">
+        
+        <p>Vector Art by <a href="https://www.shutterstock.com/g/Rawpixel">Rawpixel</a></p>
+
+        <p>Vector Art by <a href="https://www.vecteezy.com/">Vecteezy</a></p>
+
+    </div>
+
+    
     </div>
 
   </footer>
